--- a/src/app/authentication/components/profile/profile.component.html
+++ b/src/app/authentication/components/profile/profile.component.html
@@ -2,7 +2,8 @@
     <div class="app-title">
         <div>
           <h1><i class="fa fa-user"></i> ข้อมูลส่วนตัว</h1>
-          <p>Start a beautiful journey here</p>
+          <p>หน้าแก้ไขข้อมูลส่วนตัวไม่ว่าจะเป็น ชื่อ นามสกุล และอื่นๆ
+          </p>
         </div>
         <ul class="app-breadcrumb breadcrumb">
           <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
@@ -12,7 +13,72 @@
       <div class="row">
         <div class="col-md-12">
           <div class="tile">
-            <div class="tile-body">Create a beautiful Profile</div>
+            
+               <!--ส่วนหัวของ-->
+              <div class="tile-title-w-btn">
+                  <h3 class="title">
+                      <i class="fa fa-edit"></i>แก้ไขข้อมูลส่วนตัว
+                  </h3>
+                  <p>
+                    <button type="button" class="btn btn-primary icon-btn">
+                      <i class="fa fa-key"></i> เปลี่ยนรหัสผ่าน
+                    </button>
+                  </p>
+              </div>
+
+
+            <!--ส่วนฟอร์ม-->
+            <div class="tile-body">
+              <form action="">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                        <img src="assets/images/no_image_profile.png" class="img-fluid img-thumbnail" alt="Image">
+                    </div>
+                    <div class="form-group">
+                      <input type="file">
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                      <div class="form-group">
+                        <label for="">อีเมล์</label>
+                        <input type="text" name="" id="input" disabled class="form-control" value="" required="required" title="">
+                      </div>
+                      <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="">ชื่อ</label>
+                                <input type="text" name="" id="input" class="form-control" value="" required="required" title="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="">นามสกุล</label>
+                                <input type="text" name="" id="input" class="form-control" value="" required="required" title="">
+                            </div>
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="">ตำแหน่ง</label>
+                          <select  class="form-control">
+                              <option value="">เลือกตำแหน่งงาน</option>
+                              <option *ngFor="let item of positionItem" [value] = "item">
+                                {{ item }}
+                              </option>
+                          </select>
+                      </div>
+
+                  </div>
+                </div>
+                <hr>
+                <div class="form-group">
+                    <button class="btn btn-primary icon-btn" type="submit">
+                        <i class="fa fa-save"></i> บันทึกข้อมูลโปรไฟล์
+                      </button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
