--- a/src/app/authentication/components/profile/profile.component.html
+++ b/src/app/authentication/components/profile/profile.component.html
@@ -43,19 +43,19 @@
                   <div class="col-sm-6">
                       <div class="form-group">
                         <label for="">อีเมล์</label>
-                        <input type="text" name="" id="input"  formControlName = "email" class="form-control" value="" required="required" title="">
+                        <input type="text" name=""   formControlName = "email" class="form-control" value="" required="required" title="">
                       </div>
                       <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="">ชื่อ</label>
-                                <input type="text" name="" id="input" class="form-control"  formControlName = "firstname" value="" required="required" title="">
+                                <input type="text" name=""  class="form-control"  formControlName = "firstname" value="" required="required" title="">
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="">นามสกุล</label>
-                                <input type="text" name="" id="input" class="form-control"  formControlName = "lastname" value="" required="required" title="">
+                                <input type="text" name="" class="form-control"  formControlName = "lastname" value="" required="required" title="">
                             </div>
                         </div>
                       </div>
