--- a/src/app/authentication/components/member-create/member-create.component.html
+++ b/src/app/authentication/components/member-create/member-create.component.html
@@ -1,19 +1,100 @@
 <app-auth-content>
-    <div class="app-title">
-        <div>
-          <h1><i class="fa fa-users"></i> เพิ่มสมาชิกใหม่</h1>
-          <p></p>
+  <div class="app-title">
+    <div>
+      <h1><i class="fa fa-users"></i> เพิ่มสมาชิกใหม่</h1>
+      <p>หน้าสำหรับเพิ่มหรือแก้ไขสมาชิก</p>
+    </div>
+    <ul class="app-breadcrumb breadcrumb">
+      <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+      <li class="breadcrumb-item"><a href="#">เพิ่มสมาชิกใหม่</a></li>
+    </ul>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="tile">
+
+        <!--ส่วนหัวของ-->
+        <div class="tile-title-w-btn">
+          <h3 class="title">
+            <i class="fa fa-user-plus"></i> เพิ่มสมาชิกใหม่
+          </h3>
+
         </div>
-        <ul class="app-breadcrumb breadcrumb">
-          <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-          <li class="breadcrumb-item"><a href="#">เพิ่มสมาชิกใหม่</a></li>
-        </ul>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="tile">
-            <div class="tile-body">Create a beautiful Members</div>
-          </div>
+
+
+        <!--ส่วนฟอร์ม-->
+        <div class="tile-body">
+          <form (submit)="onSubmit()">
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <img src="assets/images/no_image_profile.png" class="img-fluid img-thumbnail" alt="Image">
+
+                </div>
+                <div class="form-group">
+                  <input type="file" (change)="onConvertImage(inputFile)" #inputFile>
+                </div>
+              </div>
+              <div class="col-sm-8">
+                <div class="form-group">
+                  <label for="">อีเมล์</label>
+                  <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                </div>
+                <div class="form-group">
+                  <label for="">รหัสผ่าน</label>
+                  <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                </div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="">ชื่อ</label>
+                      <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="">นามสกุล</label>
+                      <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="">ตำแหน่ง</label>
+                      <select class="form-control">
+                        <option value="">เลือกตำแหน่งงาน</option>
+                        <option *ngFor="let item of positionItem" [value]="item">
+                          {{ item }}
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="">สิทธิ์ผู้ใช้งาน</label>
+                      <select class="form-control">
+                        <option value="">เลือกสิทธิ์ผู้ใช้งาน</option>
+                        <option *ngFor="let item of roleItem" [value]="item">
+                          {{ getRoleName(item) }}
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+            <hr>
+            <div class="form-group">
+              <button class="btn btn-primary icon-btn" type="submit">
+                <i class="fa fa-save"></i> บันทึกข้อมูลโปรไฟล์
+              </button>
+            </div>
+          </form>
         </div>
       </div>
+    </div>
+  </div>
 </app-auth-content>>
