--- a/src/app/authentication/components/member-create/member-create.component.html
+++ b/src/app/authentication/components/member-create/member-create.component.html
@@ -24,7 +24,7 @@
 
         <!--ส่วนฟอร์ม-->
         <div class="tile-body">
-          <form (submit)="onSubmit()">
+          <form [formGroup]="form" (submit)="onSubmit()">
             <div class="row">
               <div class="col-sm-4">
                 <div class="form-group">
@@ -38,23 +38,23 @@
               <div class="col-sm-8">
                 <div class="form-group">
                   <label for="">อีเมล์</label>
-                  <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                  <input type="text" name="" class="form-control" value="" placeholder="กรุณากรอกข้อมูล" formControlName="email">
                 </div>
                 <div class="form-group">
                   <label for="">รหัสผ่าน</label>
-                  <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                  <input type="text" name="" class="form-control" value="" placeholder="กรุณากรอกข้อมูล" formControlName="password">
                 </div>
                 <div class="row">
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label for="">ชื่อ</label>
-                      <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                      <input type="text" name="" class="form-control" value="" placeholder="กรุณากรอกข้อมูล" formControlName="firstname">
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label for="">นามสกุล</label>
-                      <input type="text" name="" class="form-control" value="" required="required" placeholder = "กรุณากรอกข้อมูล" title="">
+                      <input type="text" name="" class="form-control" value="" placeholder="กรุณากรอกข้อมูล" formControlName="lastname">
                     </div>
                   </div>
                 </div>
@@ -62,7 +62,7 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label for="">ตำแหน่ง</label>
-                      <select class="form-control">
+                      <select class="form-control" formControlName="position">
                         <option value="">เลือกตำแหน่งงาน</option>
                         <option *ngFor="let item of positionItem" [value]="item">
                           {{ item }}
@@ -73,7 +73,7 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label for="">สิทธิ์ผู้ใช้งาน</label>
-                      <select class="form-control">
+                      <select class="form-control" formControlName="role">
                         <option value="">เลือกสิทธิ์ผู้ใช้งาน</option>
                         <option *ngFor="let item of roleItem" [value]="item">
                           {{ getRoleName(item) }}
