--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-bootstrap/datepicker/bs-datepicker.css';
 
 .ng-invalid.ng-touched {
     border-color: red;
 }
 [data-notify="container"] {
     z-index: 1060 !important;
+}
+
+.theme-green .bs-datepicker-head, 
+.theme-green .bs-datepicker-body table td span.selected {
+    background-color: #009688;
+}
+
+.theme-green .bs-datepicker-body table td.week span {
+    color: red;
 }
