--- a/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
+++ b/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
@@ -12,14 +12,16 @@
        </div>
      </div>
      <ul class="app-menu">
-       <li><a class="app-menu__item" [routerLink]="['/', AppURL.Authen, AuthURL.Dashboard]" routerLinkActive="active" ><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">แดชบอร์ด</span></a></li>
-       <li class="treeview" routerLinkActive="is-expanded"><a class="app-menu__item" href="#" data-toggle="treeview" >
+       <li *ngIf="UserLogin.role != Role.Member">
+         <a class="app-menu__item" [routerLink]="['/', AppURL.Authen, AuthURL.Dashboard]" routerLinkActive="active" ><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">แดชบอร์ด</span></a></li>
+       
+         <li *ngIf="UserLogin.role != Role.Member" class="treeview" routerLinkActive="is-expanded"><a class="app-menu__item" href="#" data-toggle="treeview" >
          <i class="app-menu__icon fa fa-users"></i>
          <span class="app-menu__label">ส่วนของสมาชิก</span>
          <i class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
           <li><a class="treeview-item"  [routerLink]="['/', AppURL.Authen, AuthURL.Member]" routerLinkActive="active"><i class="icon fa fa-circle-o"></i> รายการสมาชิก</a></li>
-          <li><a class="treeview-item" [routerLink]="['/', AppURL.Authen, AuthURL.MemberCreate]" routerLinkActive="active"><i class="icon fa fa-circle-o"></i> เพิ่มสมาชิกใหม่</a></li>
+          <li *ngIf="UserLogin.role == Role.Admin"><a class="treeview-item" [routerLink]="['/', AppURL.Authen, AuthURL.MemberCreate]" routerLinkActive="active"><i class="icon fa fa-circle-o"></i> เพิ่มสมาชิกใหม่</a></li>
         </ul>
       </li>
        <li class="treeview" routerLinkActive="is-expanded"><a class="app-menu__item" href="#" data-toggle="treeview" routerLinkActive="active"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">ส่วนของหน้า UI</span><i class="treeview-indicator fa fa-angle-right"></i></a>
