--- a/src/app/authentication/components/members/members.component.html
+++ b/src/app/authentication/components/members/members.component.html
@@ -52,7 +52,7 @@
             </div>
           </div>
         </div>
-        <div class="tile-body">
+        <div class="tile-body" *ngIf="items">
           <div class="table-responsive">
             <table class="table">
               <!-- Head item -->
